fertilizer recommendation, NPK prediction, crop recommendation approach2 preprocessing

--- a/notebooks/CropProduction/cropProductionPreprocessing.ipynb
+++ b/notebooks/CropProduction/cropProductionPreprocessing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 17
     }
    ],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State_Name</th>\n      <th>District_Name</th>\n      <th>Crop_Year</th>\n      <th>Season</th>\n      <th>Crop</th>\n      <th>Area</th>\n      <th>Production</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2000</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>102.0</td>\n      <td>321.00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2000</td>\n      <td>Whole Year</td>\n      <td>Banana</td>\n      <td>176.0</td>\n      <td>641.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2001</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>83.0</td>\n      <td>300.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2002</td>\n      <td>Kharif</td>\n      <td>Rice</td>\n      <td>189.2</td>\n      <td>510.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Andaman and Nicobar Islands</td>\n      <td>NICOBARS</td>\n      <td>2002</td>\n      <td>Whole Year</td>\n      <td>Banana</td>\n      <td>213.0</td>\n      <td>1278.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>35199</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Autumn</td>\n      <td>Maize</td>\n      <td>6317.0</td>\n      <td>13337.00</td>\n    </tr>\n    <tr>\n      <th>35200</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Autumn</td>\n      <td>Rice</td>\n      <td>264.0</td>\n      <td>721.00</td>\n    </tr>\n    <tr>\n      <th>35201</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Summer</td>\n      <td>Maize</td>\n      <td>325.0</td>\n      <td>2039.00</td>\n    </tr>\n    <tr>\n      <th>35202</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Summer</td>\n      <td>Rice</td>\n      <td>306.0</td>\n      <td>801.00</td>\n    </tr>\n    <tr>\n      <th>35203</th>\n      <td>West Bengal</td>\n      <td>PURULIA</td>\n      <td>2014</td>\n      <td>Winter</td>\n      <td>Rice</td>\n      <td>279151.0</td>\n      <td>597899.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>35204 rows × 7 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 18
     }
    ],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finalData=data[data['Production']>0].reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -209,18 +218,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 23
     }
    ],
    "source": [
-    "finalData=data[data['Production']>0].reset_index(drop=True)\n",
     "# Check for NULL values\n",
     "finalData.isnull().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -237,16 +245,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 24
     }
    ],
    "source": [
+    "# Check for na values\n",
     "finalData.isna().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -271,16 +280,17 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State_Name</th>\n      <th>District_Name</th>\n      <th>Season</th>\n      <th>Crop</th>\n      <th>Area</th>\n      <th>Production</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>424</td>\n      <td>1</td>\n      <td>11</td>\n      <td>102.0</td>\n      <td>321.00</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>424</td>\n      <td>4</td>\n      <td>1</td>\n      <td>176.0</td>\n      <td>641.00</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>424</td>\n      <td>1</td>\n      <td>11</td>\n      <td>83.0</td>\n      <td>300.00</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>424</td>\n      <td>1</td>\n      <td>11</td>\n      <td>189.2</td>\n      <td>510.84</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>424</td>\n      <td>4</td>\n      <td>1</td>\n      <td>213.0</td>\n      <td>1278.00</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>34538</th>\n      <td>32</td>\n      <td>468</td>\n      <td>0</td>\n      <td>7</td>\n      <td>6317.0</td>\n      <td>13337.00</td>\n    </tr>\n    <tr>\n      <th>34539</th>\n      <td>32</td>\n      <td>468</td>\n      <td>0</td>\n      <td>11</td>\n      <td>264.0</td>\n      <td>721.00</td>\n    </tr>\n    <tr>\n      <th>34540</th>\n      <td>32</td>\n      <td>468</td>\n      <td>3</td>\n      <td>7</td>\n      <td>325.0</td>\n      <td>2039.00</td>\n    </tr>\n    <tr>\n      <th>34541</th>\n      <td>32</td>\n      <td>468</td>\n      <td>3</td>\n      <td>11</td>\n      <td>306.0</td>\n      <td>801.00</td>\n    </tr>\n    <tr>\n      <th>34542</th>\n      <td>32</td>\n      <td>468</td>\n      <td>5</td>\n      <td>11</td>\n      <td>279151.0</td>\n      <td>597899.00</td>\n    </tr>\n  </tbody>\n</table>\n<p>34543 rows × 6 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 25
     }
    ],
    "source": [
+    "# Display Final Data\n",
     "finalData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
