--- a/notebooks/CropRecommendation/CropRecommendation1/CropRecommendation/cropRecommendationPreprocessing.ipynb
+++ b/notebooks/CropRecommendation/CropRecommendation1/CropRecommendation/cropRecommendationPreprocessing.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define DataFrame\n",
-    "cropProductionMinified=pd.read_csv(\"../../data/CropProductionMinified.csv\")\n",
-    "cropRecommentationA1=pd.read_csv(\"../../data/CropRecommendationApproach1.csv\")"
+    "cropProductionMinified=pd.read_csv(\"../../../../data/CropProductionMinified.csv\")\n",
+    "cropRecommentationA1=pd.read_csv(\"../../../../data/CropRecommendationApproach1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -60,15 +60,15 @@
    "source": [
     "# Crop Production Unique\n",
     "cpUnique=pd.unique(cropProductionMinified[\"Crop\"].str.lower())\n",
+    "# Crop Recommendation Unique\n",
     "crUnique=pd.unique(cropRecommentationA1[\"label\"].str.lower())\n",
-    "\n",
     "print(\"Crop Production Unique Crops: \",cpUnique)\n",
     "print(\"Crop Recommendation Unique Crops: \",crUnique)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -103,16 +103,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 15
     }
    ],
    "source": [
+    "# Check for NULL values\n",
     "cropRecommentationA1.isna().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -127,16 +128,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 16
     }
    ],
    "source": [
+    "# Check for na values\n",
     "cropRecommentationA1.isnull().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -161,21 +163,22 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20.879744</td>\n      <td>82.002744</td>\n      <td>202.935536</td>\n      <td>rice</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>21.770462</td>\n      <td>80.319644</td>\n      <td>226.655537</td>\n      <td>rice</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>23.004459</td>\n      <td>82.320763</td>\n      <td>263.964248</td>\n      <td>rice</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>26.491096</td>\n      <td>80.158363</td>\n      <td>242.864034</td>\n      <td>rice</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>20.130175</td>\n      <td>81.604873</td>\n      <td>262.717340</td>\n      <td>rice</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1195</th>\n      <td>26.774637</td>\n      <td>66.413269</td>\n      <td>177.774507</td>\n      <td>coffee</td>\n    </tr>\n    <tr>\n      <th>1196</th>\n      <td>27.417112</td>\n      <td>56.636362</td>\n      <td>127.924610</td>\n      <td>coffee</td>\n    </tr>\n    <tr>\n      <th>1197</th>\n      <td>24.131797</td>\n      <td>67.225123</td>\n      <td>173.322839</td>\n      <td>coffee</td>\n    </tr>\n    <tr>\n      <th>1198</th>\n      <td>26.272418</td>\n      <td>52.127394</td>\n      <td>127.175293</td>\n      <td>coffee</td>\n    </tr>\n    <tr>\n      <th>1199</th>\n      <td>23.603016</td>\n      <td>60.396475</td>\n      <td>140.937041</td>\n      <td>coffee</td>\n    </tr>\n  </tbody>\n</table>\n<p>1200 rows × 4 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 17
     }
    ],
    "source": [
+    "# Display Final Data\n",
     "cropRecommentationA1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export Preprocessed Data\n",
-    "cropRecommentationA1.to_csv(\"../../preprocessedData/CropRecommentationApproach1.csv\")"
+    "cropRecommentationA1.to_csv(\"../../../../preprocessedData/CropRecommentationApproach1.csv\")"
    ]
   }
  ]
