--- a/notebooks/CropRecommendation/CropRecommendation2/models/cropRecommendationSVM.ipynb
+++ b/notebooks/CropRecommendation/CropRecommendation2/models/cropRecommendationSVM.ipynb
@@ -34,6 +34,7 @@
     "from sklearn import metrics\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "# Models\n",
     "from sklearn.svm import SVC"
    ]
@@ -64,47 +65,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,X_test,Y_train,Y_test=train_test_split(features,target,test_size=0.1,random_state=2)"
+    "# Standardization\n",
+    "scaler=StandardScaler()\n",
+    "scaler.fit(features)\n",
+    "features=scaler.transform(features)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array(['maize', 'banana', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'apple', 'maize', 'maize', 'blackgram', 'maize', 'maize',\n",
-       "       'apple', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'apple', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'banana', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'coffee', 'jute', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'maize', 'maize', 'maize', 'maize', 'maize', 'maize', 'maize',\n",
-       "       'blackgram'], dtype=object)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "source": [
-    "SVM = SVC(gamma='auto')\n",
-    "SVM.fit(X_train,Y_train)\n",
-    "predicted_values=SVM.predict(X_test)\n",
-    "predicted_values"
+    "X_train,X_test,Y_train,Y_test=train_test_split(features,target,test_size=0.1,random_state=2)"
    ]
   },
   {
@@ -113,10 +86,72 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "SVC(gamma='auto')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "# Training\n",
+    "SVM = SVC(gamma='auto')\n",
+    "SVM.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['jute', 'banana', 'rice', 'papaya', 'rice', 'coffee', 'grapes',\n",
+       "       'jute', 'apple', 'papaya', 'maize', 'blackgram', 'orange',\n",
+       "       'papaya', 'apple', 'blackgram', 'blackgram', 'papaya', 'apple',\n",
+       "       'lentil', 'coffee', 'banana', 'grapes', 'papaya', 'maize', 'jute',\n",
+       "       'banana', 'lentil', 'blackgram', 'rice', 'orange', 'apple',\n",
+       "       'coffee', 'mango', 'grapes', 'jute', 'banana', 'coffee', 'papaya',\n",
+       "       'mango', 'papaya', 'lentil', 'grapes', 'lentil', 'jute', 'grapes',\n",
+       "       'papaya', 'banana', 'lentil', 'banana', 'lentil', 'orange', 'jute',\n",
+       "       'grapes', 'blackgram', 'lentil', 'apple', 'maize', 'banana',\n",
+       "       'jute', 'orange', 'banana', 'jute', 'blackgram', 'coffee', 'jute',\n",
+       "       'mango', 'apple', 'banana', 'papaya', 'lentil', 'mango', 'mango',\n",
+       "       'jute', 'banana', 'banana', 'rice', 'mango', 'papaya', 'lentil',\n",
+       "       'orange', 'papaya', 'coffee', 'rice', 'rice', 'mango', 'orange',\n",
+       "       'papaya', 'grapes', 'jute', 'mango', 'lentil', 'papaya', 'mango',\n",
+       "       'rice', 'coffee', 'blackgram', 'orange', 'jute', 'mango', 'mango',\n",
+       "       'apple', 'papaya', 'blackgram', 'grapes', 'lentil', 'rice', 'rice',\n",
+       "       'maize', 'maize', 'lentil', 'blackgram', 'blackgram', 'papaya',\n",
+       "       'blackgram', 'orange', 'orange', 'maize', 'maize', 'blackgram'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "# Testing\n",
+    "predicted_values=SVM.predict(X_test)\n",
+    "predicted_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Crop Recommendation Accuracy: 0.13333333333333333\n"
+      "Crop Recommendation Accuracy: 0.9833333333333333\n"
      ]
     }
    ],
@@ -128,14 +163,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "              precision    recall  f1-score   support\n\n       apple       1.00      0.43      0.60         7\n      banana       1.00      0.18      0.31        11\n   blackgram       1.00      0.17      0.29        12\n      coffee       1.00      0.14      0.25         7\n      grapes       0.00      0.00      0.00         8\n        jute       1.00      0.10      0.18        10\n      lentil       0.00      0.00      0.00        12\n       maize       0.06      1.00      0.12         7\n       mango       0.00      0.00      0.00        11\n      orange       0.00      0.00      0.00         9\n      papaya       0.00      0.00      0.00        15\n        rice       0.00      0.00      0.00        11\n\n    accuracy                           0.13       120\n   macro avg       0.42      0.17      0.15       120\nweighted avg       0.40      0.13      0.13       120\n\n"
+      "Crop Validation Score:  0.9791666666666666 0.9833333333333333 0.9791666666666666 0.9875 0.975\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cross Validation Score\n",
+    "cross_val_score=cross_val_score(SVM,features,target,cv=5)\n",
+    "print(\"Crop Validation Score: \",*cross_val_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "              precision    recall  f1-score   support\n\n       apple       1.00      1.00      1.00         7\n      banana       1.00      1.00      1.00        11\n   blackgram       1.00      1.00      1.00        12\n      coffee       1.00      1.00      1.00         7\n      grapes       1.00      1.00      1.00         8\n        jute       0.83      1.00      0.91        10\n      lentil       1.00      1.00      1.00        12\n       maize       1.00      1.00      1.00         7\n       mango       1.00      1.00      1.00        11\n      orange       1.00      1.00      1.00         9\n      papaya       1.00      1.00      1.00        15\n        rice       1.00      0.82      0.90        11\n\n    accuracy                           0.98       120\n   macro avg       0.99      0.98      0.98       120\nweighted avg       0.99      0.98      0.98       120\n\n"
      ]
     }
    ],
